lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt
Rule 2     program -> program stmt
Rule 3     stmt -> print_stmt
Rule 4     stmt -> if_stmt
Rule 5     stmt -> while_stmt
Rule 6     stmt -> for_stmt
Rule 7     stmt -> LPAREN_F stmt_list RPAREN_F
Rule 8     stmt_list -> stmt
Rule 9     stmt_list -> stmt_list stmt
Rule 10    stmt -> SEMICOLON
Rule 11    stmt -> LPAREN_F RPAREN_F
Rule 12    stmt -> BREAK SEMICOLON
Rule 13    stmt -> CONTINUE SEMICOLON
Rule 14    stmt -> expr SEMICOLON
Rule 15    stmt -> RETURN expr SEMICOLON
Rule 16    comparison -> expr GREATER expr
Rule 17    comparison -> expr LESSER expr
Rule 18    comparison -> expr GREATER_EQUAL expr
Rule 19    comparison -> expr LESSER_EQUAL expr
Rule 20    comparison -> expr EQUALS expr
Rule 21    comparison -> expr NOT_EQUAL expr
Rule 22    operator -> expr PLUS expr
Rule 23    operator -> expr MINUS expr
Rule 24    operator -> expr TIMES expr
Rule 25    operator -> expr DIVIDE expr
Rule 26    operator -> MINUS expr
Rule 27    type_recognition -> ID
Rule 28    type_recognition -> NUMBER
Rule 29    type_recognition -> FLOATNUMBER
Rule 30    type_recognition -> STRING
Rule 31    single_operation -> ID ASSIGN expr
Rule 32    single_operation -> ID INCREMENT expr
Rule 33    single_operation -> ID DECREMENT expr
Rule 34    single_operation -> ID MULTIPLY_ASSIGN expr
Rule 35    single_operation -> ID DIVIDE_ASSIGN expr
Rule 36    expression_operation -> expr PLUS_MATRIX expr
Rule 37    expression_operation -> expr MINUS_MATRIX expr
Rule 38    expression_operation -> expr TIMES_MATRIX expr
Rule 39    expression_operation -> expr DIVIDE_MATRIX expr
Rule 40    matrix_element_operation -> lvalue ASSIGN expr
Rule 41    matrix_element_operation -> lvalue INCREMENT expr
Rule 42    matrix_element_operation -> lvalue DECREMENT expr
Rule 43    matrix_element_operation -> lvalue MULTIPLY_ASSIGN expr
Rule 44    matrix_element_operation -> lvalue DIVIDE_ASSIGN expr
Rule 45    lvalue -> expr idx
Rule 46    idx -> LPAREN_SQ list RPAREN_SQ
Rule 47    list -> expr
Rule 48    list -> list COMMA expr
Rule 49    empty -> LPAREN_SQ RPAREN_SQ
Rule 50    special_matrix -> EYE LPAREN list RPAREN
Rule 51    special_matrix -> ONES LPAREN list RPAREN
Rule 52    special_matrix -> ZEROS LPAREN list RPAREN
Rule 53    expr -> type_recognition
Rule 54    expr -> single_operation
Rule 55    expr -> matrix_element_operation
Rule 56    expr -> expression_operation
Rule 57    expr -> comparison
Rule 58    expr -> operator
Rule 59    expr -> special_matrix
Rule 60    expr -> empty
Rule 61    expr -> idx
Rule 62    expr -> lvalue
Rule 63    expr -> expr TRANSPOSE
Rule 64    if_stmt -> IF LPAREN expr RPAREN stmt
Rule 65    if_stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 66    while_stmt -> WHILE LPAREN expr RPAREN stmt
Rule 67    for_stmt -> FOR ID ASSIGN range stmt
Rule 68    range -> expr RANGE expr
Rule 69    print_stmt -> PRINT list SEMICOLON

Terminals, with rules where they appear

ASSIGN               : 31 40 67
BREAK                : 12
COMMA                : 48
CONTINUE             : 13
DECREMENT            : 33 42
DIVIDE               : 25
DIVIDE_ASSIGN        : 35 44
DIVIDE_MATRIX        : 39
ELSE                 : 65
EQUALS               : 20
EYE                  : 50
FLOATNUMBER          : 29
FOR                  : 67
GREATER              : 16
GREATER_EQUAL        : 18
ID                   : 27 31 32 33 34 35 67
IF                   : 64 65
INCREMENT            : 32 41
LESSER               : 17
LESSER_EQUAL         : 19
LPAREN               : 50 51 52 64 65 66
LPAREN_F             : 7 11
LPAREN_SQ            : 46 49
MINUS                : 23 26
MINUS_MATRIX         : 37
MULTIPLY_ASSIGN      : 34 43
NOT_EQUAL            : 21
NUMBER               : 28
ONES                 : 51
PLUS                 : 22
PLUS_MATRIX          : 36
PRINT                : 69
RANGE                : 68
RETURN               : 15
RPAREN               : 50 51 52 64 65 66
RPAREN_F             : 7 11
RPAREN_SQ            : 46 49
SEMICOLON            : 10 12 13 14 15 69
STRING               : 30
TIMES                : 24
TIMES_MATRIX         : 38
TRANSPOSE            : 63
WHILE                : 66
ZEROS                : 52
error                : 

Nonterminals, with rules where they appear

comparison           : 57
empty                : 60
expr                 : 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 31 32 33 34 35 36 36 37 37 38 38 39 39 40 41 42 43 44 45 47 48 63 64 65 66 68 68
expression_operation : 56
for_stmt             : 6
idx                  : 45 61
if_stmt              : 4
list                 : 46 48 50 51 52 69
lvalue               : 40 41 42 43 44 62
matrix_element_operation : 55
operator             : 58
print_stmt           : 3
program              : 2 0
range                : 67
single_operation     : 54
special_matrix       : 59
stmt                 : 1 2 8 9 64 65 65 66 67
stmt_list            : 7 9
type_recognition     : 53
while_stmt           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt
    (2) program -> . program stmt
    (3) stmt -> . print_stmt
    (4) stmt -> . if_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . for_stmt
    (7) stmt -> . LPAREN_F stmt_list RPAREN_F
    (10) stmt -> . SEMICOLON
    (11) stmt -> . LPAREN_F RPAREN_F
    (12) stmt -> . BREAK SEMICOLON
    (13) stmt -> . CONTINUE SEMICOLON
    (14) stmt -> . expr SEMICOLON
    (15) stmt -> . RETURN expr SEMICOLON
    (69) print_stmt -> . PRINT list SEMICOLON
    (64) if_stmt -> . IF LPAREN expr RPAREN stmt
    (65) if_stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (66) while_stmt -> . WHILE LPAREN expr RPAREN stmt
    (67) for_stmt -> . FOR ID ASSIGN range stmt
    (53) expr -> . type_recognition
    (54) expr -> . single_operation
    (55) expr -> . matrix_element_operation
    (56) expr -> . expression_operation
    (57) expr -> . comparison
    (58) expr -> . operator
    (59) expr -> . special_matrix
    (60) expr -> . empty
    (61) expr -> . idx
    (62) expr -> . lvalue
    (63) expr -> . expr TRANSPOSE
    (27) type_recognition -> . ID
    (28) type_recognition -> . NUMBER
    (29) type_recognition -> . FLOATNUMBER
    (30) type_recognition -> . STRING
    (31) single_operation -> . ID ASSIGN expr
    (32) single_operation -> . ID INCREMENT expr
    (33) single_operation -> . ID DECREMENT expr
    (34) single_operation -> . ID MULTIPLY_ASSIGN expr
    (35) single_operation -> . ID DIVIDE_ASSIGN expr
    (40) matrix_element_operation -> . lvalue ASSIGN expr
    (41) matrix_element_operation -> . lvalue INCREMENT expr
    (42) matrix_element_operation -> . lvalue DECREMENT expr
    (43) matrix_element_operation -> . lvalue MULTIPLY_ASSIGN expr
    (44) matrix_element_operation -> . lvalue DIVIDE_ASSIGN expr
    (36) expression_operation -> . expr PLUS_MATRIX expr
    (37) expression_operation -> . expr MINUS_MATRIX expr
    (38) expression_operation -> . expr TIMES_MATRIX expr
    (39) expression_operation -> . expr DIVIDE_MATRIX expr
    (16) comparison -> . expr GREATER expr
    (17) comparison -> . expr LESSER expr
    (18) comparison -> . expr GREATER_EQUAL expr
    (19) comparison -> . expr LESSER_EQUAL expr
    (20) comparison -> . expr EQUALS expr
    (21) comparison -> . expr NOT_EQUAL expr
    (22) operator -> . expr PLUS expr
    (23) operator -> . expr MINUS expr
    (24) operator -> . expr TIMES expr
    (25) operator -> . expr DIVIDE expr
    (26) operator -> . MINUS expr
    (50) special_matrix -> . EYE LPAREN list RPAREN
    (51) special_matrix -> . ONES LPAREN list RPAREN
    (52) special_matrix -> . ZEROS LPAREN list RPAREN
    (49) empty -> . LPAREN_SQ RPAREN_SQ
    (46) idx -> . LPAREN_SQ list RPAREN_SQ
    (45) lvalue -> . expr idx

    LPAREN_F        shift and go to state 7
    SEMICOLON       shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    ID              shift and go to state 17
    NUMBER          shift and go to state 28
    FLOATNUMBER     shift and go to state 29
    STRING          shift and go to state 30
    MINUS           shift and go to state 31
    EYE             shift and go to state 32
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    LPAREN_SQ       shift and go to state 35

    program                        shift and go to state 1
    stmt                           shift and go to state 2
    print_stmt                     shift and go to state 3
    if_stmt                        shift and go to state 4
    while_stmt                     shift and go to state 5
    for_stmt                       shift and go to state 6
    expr                           shift and go to state 11
    type_recognition               shift and go to state 18
    single_operation               shift and go to state 19
    matrix_element_operation       shift and go to state 20
    expression_operation           shift and go to state 21
    comparison                     shift and go to state 22
    operator                       shift and go to state 23
    special_matrix                 shift and go to state 24
    empty                          shift and go to state 25
    idx                            shift and go to state 26
    lvalue                         shift and go to state 27

state 1

    (0) S' -> program .
    (2) program -> program . stmt
    (3) stmt -> . print_stmt
    (4) stmt -> . if_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . for_stmt
    (7) stmt -> . LPAREN_F stmt_list RPAREN_F
    (10) stmt -> . SEMICOLON
    (11) stmt -> . LPAREN_F RPAREN_F
    (12) stmt -> . BREAK SEMICOLON
    (13) stmt -> . CONTINUE SEMICOLON
    (14) stmt -> . expr SEMICOLON
    (15) stmt -> . RETURN expr SEMICOLON
    (69) print_stmt -> . PRINT list SEMICOLON
    (64) if_stmt -> . IF LPAREN expr RPAREN stmt
    (65) if_stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (66) while_stmt -> . WHILE LPAREN expr RPAREN stmt
    (67) for_stmt -> . FOR ID ASSIGN range stmt
    (53) expr -> . type_recognition
    (54) expr -> . single_operation
    (55) expr -> . matrix_element_operation
    (56) expr -> . expression_operation
    (57) expr -> . comparison
    (58) expr -> . operator
    (59) expr -> . special_matrix
    (60) expr -> . empty
    (61) expr -> . idx
    (62) expr -> . lvalue
    (63) expr -> . expr TRANSPOSE
    (27) type_recognition -> . ID
    (28) type_recognition -> . NUMBER
    (29) type_recognition -> . FLOATNUMBER
    (30) type_recognition -> . STRING
    (31) single_operation -> . ID ASSIGN expr
    (32) single_operation -> . ID INCREMENT expr
    (33) single_operation -> . ID DECREMENT expr
    (34) single_operation -> . ID MULTIPLY_ASSIGN expr
    (35) single_operation -> . ID DIVIDE_ASSIGN expr
    (40) matrix_element_operation -> . lvalue ASSIGN expr
    (41) matrix_element_operation -> . lvalue INCREMENT expr
    (42) matrix_element_operation -> . lvalue DECREMENT expr
    (43) matrix_element_operation -> . lvalue MULTIPLY_ASSIGN expr
    (44) matrix_element_operation -> . lvalue DIVIDE_ASSIGN expr
    (36) expression_operation -> . expr PLUS_MATRIX expr
    (37) expression_operation -> . expr MINUS_MATRIX expr
    (38) expression_operation -> . expr TIMES_MATRIX expr
    (39) expression_operation -> . expr DIVIDE_MATRIX expr
    (16) comparison -> . expr GREATER expr
    (17) comparison -> . expr LESSER expr
    (18) comparison -> . expr GREATER_EQUAL expr
    (19) comparison -> . expr LESSER_EQUAL expr
    (20) comparison -> . expr EQUALS expr
    (21) comparison -> . expr NOT_EQUAL expr
    (22) operator -> . expr PLUS expr
    (23) operator -> . expr MINUS expr
    (24) operator -> . expr TIMES expr
    (25) operator -> . expr DIVIDE expr
    (26) operator -> . MINUS expr
    (50) special_matrix -> . EYE LPAREN list RPAREN
    (51) special_matrix -> . ONES LPAREN list RPAREN
    (52) special_matrix -> . ZEROS LPAREN list RPAREN
    (49) empty -> . LPAREN_SQ RPAREN_SQ
    (46) idx -> . LPAREN_SQ list RPAREN_SQ
    (45) lvalue -> . expr idx

    LPAREN_F        shift and go to state 7
    SEMICOLON       shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    ID              shift and go to state 17
    NUMBER          shift and go to state 28
    FLOATNUMBER     shift and go to state 29
    STRING          shift and go to state 30
    MINUS           shift and go to state 31
    EYE             shift and go to state 32
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    LPAREN_SQ       shift and go to state 35

    stmt                           shift and go to state 36
    print_stmt                     shift and go to state 3
    if_stmt                        shift and go to state 4
    while_stmt                     shift and go to state 5
    for_stmt                       shift and go to state 6
    expr                           shift and go to state 11
    type_recognition               shift and go to state 18
    single_operation               shift and go to state 19
    matrix_element_operation       shift and go to state 20
    expression_operation           shift and go to state 21
    comparison                     shift and go to state 22
    operator                       shift and go to state 23
    special_matrix                 shift and go to state 24
    empty                          shift and go to state 25
    idx                            shift and go to state 26
    lvalue                         shift and go to state 27

state 2

    (1) program -> stmt .

    LPAREN_F        reduce using rule 1 (program -> stmt .)
    SEMICOLON       reduce using rule 1 (program -> stmt .)
    BREAK           reduce using rule 1 (program -> stmt .)
    CONTINUE        reduce using rule 1 (program -> stmt .)
    RETURN          reduce using rule 1 (program -> stmt .)
    PRINT           reduce using rule 1 (program -> stmt .)
    IF              reduce using rule 1 (program -> stmt .)
    WHILE           reduce using rule 1 (program -> stmt .)
    FOR             reduce using rule 1 (program -> stmt .)
    ID              reduce using rule 1 (program -> stmt .)
    NUMBER          reduce using rule 1 (program -> stmt .)
    FLOATNUMBER     reduce using rule 1 (program -> stmt .)
    STRING          reduce using rule 1 (program -> stmt .)
    MINUS           reduce using rule 1 (program -> stmt .)
    EYE             reduce using rule 1 (program -> stmt .)
    ONES            reduce using rule 1 (program -> stmt .)
    ZEROS           reduce using rule 1 (program -> stmt .)
    LPAREN_SQ       reduce using rule 1 (program -> stmt .)
    $end            reduce using rule 1 (program -> stmt .)


state 3

    (3) stmt -> print_stmt .

    LPAREN_F        reduce using rule 3 (stmt -> print_stmt .)
    SEMICOLON       reduce using rule 3 (stmt -> print_stmt .)
    BREAK           reduce using rule 3 (stmt -> print_stmt .)
    CONTINUE        reduce using rule 3 (stmt -> print_stmt .)
    RETURN          reduce using rule 3 (stmt -> print_stmt .)
    PRINT           reduce using rule 3 (stmt -> print_stmt .)
    IF              reduce using rule 3 (stmt -> print_stmt .)
    WHILE           reduce using rule 3 (stmt -> print_stmt .)
    FOR             reduce using rule 3 (stmt -> print_stmt .)
    ID              reduce using rule 3 (stmt -> print_stmt .)
    NUMBER          reduce using rule 3 (stmt -> print_stmt .)
    FLOATNUMBER     reduce using rule 3 (stmt -> print_stmt .)
    STRING          reduce using rule 3 (stmt -> print_stmt .)
    MINUS           reduce using rule 3 (stmt -> print_stmt .)
    EYE             reduce using rule 3 (stmt -> print_stmt .)
    ONES            reduce using rule 3 (stmt -> print_stmt .)
    ZEROS           reduce using rule 3 (stmt -> print_stmt .)
    LPAREN_SQ       reduce using rule 3 (stmt -> print_stmt .)
    $end            reduce using rule 3 (stmt -> print_stmt .)
    RPAREN_F        reduce using rule 3 (stmt -> print_stmt .)
    ELSE            reduce using rule 3 (stmt -> print_stmt .)


state 4

    (4) stmt -> if_stmt .

    LPAREN_F        reduce using rule 4 (stmt -> if_stmt .)
    SEMICOLON       reduce using rule 4 (stmt -> if_stmt .)
    BREAK           reduce using rule 4 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 4 (stmt -> if_stmt .)
    RETURN          reduce using rule 4 (stmt -> if_stmt .)
    PRINT           reduce using rule 4 (stmt -> if_stmt .)
    IF              reduce using rule 4 (stmt -> if_stmt .)
    WHILE           reduce using rule 4 (stmt -> if_stmt .)
    FOR             reduce using rule 4 (stmt -> if_stmt .)
    ID              reduce using rule 4 (stmt -> if_stmt .)
    NUMBER          reduce using rule 4 (stmt -> if_stmt .)
    FLOATNUMBER     reduce using rule 4 (stmt -> if_stmt .)
    STRING          reduce using rule 4 (stmt -> if_stmt .)
    MINUS           reduce using rule 4 (stmt -> if_stmt .)
    EYE             reduce using rule 4 (stmt -> if_stmt .)
    ONES            reduce using rule 4 (stmt -> if_stmt .)
    ZEROS           reduce using rule 4 (stmt -> if_stmt .)
    LPAREN_SQ       reduce using rule 4 (stmt -> if_stmt .)
    $end            reduce using rule 4 (stmt -> if_stmt .)
    RPAREN_F        reduce using rule 4 (stmt -> if_stmt .)
    ELSE            reduce using rule 4 (stmt -> if_stmt .)


state 5

    (5) stmt -> while_stmt .

    LPAREN_F        reduce using rule 5 (stmt -> while_stmt .)
    SEMICOLON       reduce using rule 5 (stmt -> while_stmt .)
    BREAK           reduce using rule 5 (stmt -> while_stmt .)
    CONTINUE        reduce using rule 5 (stmt -> while_stmt .)
    RETURN          reduce using rule 5 (stmt -> while_stmt .)
    PRINT           reduce using rule 5 (stmt -> while_stmt .)
    IF              reduce using rule 5 (stmt -> while_stmt .)
    WHILE           reduce using rule 5 (stmt -> while_stmt .)
    FOR             reduce using rule 5 (stmt -> while_stmt .)
    ID              reduce using rule 5 (stmt -> while_stmt .)
    NUMBER          reduce using rule 5 (stmt -> while_stmt .)
    FLOATNUMBER     reduce using rule 5 (stmt -> while_stmt .)
    STRING          reduce using rule 5 (stmt -> while_stmt .)
    MINUS           reduce using rule 5 (stmt -> while_stmt .)
    EYE             reduce using rule 5 (stmt -> while_stmt .)
    ONES            reduce using rule 5 (stmt -> while_stmt .)
    ZEROS           reduce using rule 5 (stmt -> while_stmt .)
    LPAREN_SQ       reduce using rule 5 (stmt -> while_stmt .)
    $end            reduce using rule 5 (stmt -> while_stmt .)
    RPAREN_F        reduce using rule 5 (stmt -> while_stmt .)
    ELSE            reduce using rule 5 (stmt -> while_stmt .)


state 6

    (6) stmt -> for_stmt .

    LPAREN_F        reduce using rule 6 (stmt -> for_stmt .)
    SEMICOLON       reduce using rule 6 (stmt -> for_stmt .)
    BREAK           reduce using rule 6 (stmt -> for_stmt .)
    CONTINUE        reduce using rule 6 (stmt -> for_stmt .)
    RETURN          reduce using rule 6 (stmt -> for_stmt .)
    PRINT           reduce using rule 6 (stmt -> for_stmt .)
    IF              reduce using rule 6 (stmt -> for_stmt .)
    WHILE           reduce using rule 6 (stmt -> for_stmt .)
    FOR             reduce using rule 6 (stmt -> for_stmt .)
    ID              reduce using rule 6 (stmt -> for_stmt .)
    NUMBER          reduce using rule 6 (stmt -> for_stmt .)
    FLOATNUMBER     reduce using rule 6 (stmt -> for_stmt .)
    STRING          reduce using rule 6 (stmt -> for_stmt .)
    MINUS           reduce using rule 6 (stmt -> for_stmt .)
    EYE             reduce using rule 6 (stmt -> for_stmt .)
    ONES            reduce using rule 6 (stmt -> for_stmt .)
    ZEROS           reduce using rule 6 (stmt -> for_stmt .)
    LPAREN_SQ       reduce using rule 6 (stmt -> for_stmt .)
    $end            reduce using rule 6 (stmt -> for_stmt .)
    RPAREN_F        reduce using rule 6 (stmt -> for_stmt .)
    ELSE            reduce using rule 6 (stmt -> for_stmt .)


state 7

    (7) stmt -> LPAREN_F . stmt_list RPAREN_F
    (11) stmt -> LPAREN_F . RPAREN_F
    (8) stmt_list -> . stmt
    (9) stmt_list -> . stmt_list stmt
    (3) stmt -> . print_stmt
    (4) stmt -> . if_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . for_stmt
    (7) stmt -> . LPAREN_F stmt_list RPAREN_F
    (10) stmt -> . SEMICOLON
    (11) stmt -> . LPAREN_F RPAREN_F
    (12) stmt -> . BREAK SEMICOLON
    (13) stmt -> . CONTINUE SEMICOLON
    (14) stmt -> . expr SEMICOLON
    (15) stmt -> . RETURN expr SEMICOLON
    (69) print_stmt -> . PRINT list SEMICOLON
    (64) if_stmt -> . IF LPAREN expr RPAREN stmt
    (65) if_stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (66) while_stmt -> . WHILE LPAREN expr RPAREN stmt
    (67) for_stmt -> . FOR ID ASSIGN range stmt
    (53) expr -> . type_recognition
    (54) expr -> . single_operation
    (55) expr -> . matrix_element_operation
    (56) expr -> . expression_operation
    (57) expr -> . comparison
    (58) expr -> . operator
    (59) expr -> . special_matrix
    (60) expr -> . empty
    (61) expr -> . idx
    (62) expr -> . lvalue
    (63) expr -> . expr TRANSPOSE
    (27) type_recognition -> . ID
    (28) type_recognition -> . NUMBER
    (29) type_recognition -> . FLOATNUMBER
    (30) type_recognition -> . STRING
    (31) single_operation -> . ID ASSIGN expr
    (32) single_operation -> . ID INCREMENT expr
    (33) single_operation -> . ID DECREMENT expr
    (34) single_operation -> . ID MULTIPLY_ASSIGN expr
    (35) single_operation -> . ID DIVIDE_ASSIGN expr
    (40) matrix_element_operation -> . lvalue ASSIGN expr
    (41) matrix_element_operation -> . lvalue INCREMENT expr
    (42) matrix_element_operation -> . lvalue DECREMENT expr
    (43) matrix_element_operation -> . lvalue MULTIPLY_ASSIGN expr
    (44) matrix_element_operation -> . lvalue DIVIDE_ASSIGN expr
    (36) expression_operation -> . expr PLUS_MATRIX expr
    (37) expression_operation -> . expr MINUS_MATRIX expr
    (38) expression_operation -> . expr TIMES_MATRIX expr
    (39) expression_operation -> . expr DIVIDE_MATRIX expr
    (16) comparison -> . expr GREATER expr
    (17) comparison -> . expr LESSER expr
    (18) comparison -> . expr GREATER_EQUAL expr
    (19) comparison -> . expr LESSER_EQUAL expr
    (20) comparison -> . expr EQUALS expr
    (21) comparison -> . expr NOT_EQUAL expr
    (22) operator -> . expr PLUS expr
    (23) operator -> . expr MINUS expr
    (24) operator -> . expr TIMES expr
    (25) operator -> . expr DIVIDE expr
    (26) operator -> . MINUS expr
    (50) special_matrix -> . EYE LPAREN list RPAREN
    (51) special_matrix -> . ONES LPAREN list RPAREN
    (52) special_matrix -> . ZEROS LPAREN list RPAREN
    (49) empty -> . LPAREN_SQ RPAREN_SQ
    (46) idx -> . LPAREN_SQ list RPAREN_SQ
    (45) lvalue -> . expr idx

    RPAREN_F        shift and go to state 38
    LPAREN_F        shift and go to state 7
    SEMICOLON       shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    ID              shift and go to state 17
    NUMBER          shift and go to state 28
    FLOATNUMBER     shift and go to state 29
    STRING          shift and go to state 30
    MINUS           shift and go to state 31
    EYE             shift and go to state 32
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    LPAREN_SQ       shift and go to state 35

    stmt_list                      shift and go to state 37
    stmt                           shift and go to state 39
    print_stmt                     shift and go to state 3
    if_stmt                        shift and go to state 4
    while_stmt                     shift and go to state 5
    for_stmt                       shift and go to state 6
    expr                           shift and go to state 11
    type_recognition               shift and go to state 18
    single_operation               shift and go to state 19
    matrix_element_operation       shift and go to state 20
    expression_operation           shift and go to state 21
    comparison                     shift and go to state 22
    operator                       shift and go to state 23
    special_matrix                 shift and go to state 24
    empty                          shift and go to state 25
    idx                            shift and go to state 26
    lvalue                         shift and go to state 27

state 8

    (10) stmt -> SEMICOLON .
